# ContextBudget

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-COMMERCIAL  Makefile  README.md  ROADMAP.md  SECURITY.md  action.yml  docker-compose.yml  pilot-readiness.md  policy.toml  pyproject.toml  redcon.toml  run-option-a.json
.github/: CODEOWNERS  ISSUES_BACKLOG.md  LAUNCH_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  contextbudget-policy.toml  dependabot.yml  redcon-policy.toml
benchmarks/: build_agent_run_dataset.py  cmd_baseline.json  generate_dataset.py  measure_sessions.py  run_benchmarks.py  run_cmd_benchmarks.py  session_measurements.json  session_measurements.md
contextbudget/: __init__.py  cli.py  config.py  engine.py
contextbudget-cloud/: .env.example  docker-compose.multiregion.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.js
demo/: README.md  run_demo.py
deploy/: nginx.conf  pgbouncer-userlist.txt.example  pgbouncer.ini  postgres-primary.conf  postgres-replica.conf
docs/: agent-integration.md  agent-runtime.md  analytics-events.md  api-keys.md  architecture.md  audit-logs.md  benchmark-and-diff.md  cache.md  cli.md  configuration.md  control-plane.md  cost-analytics.md  deployment.md  events.md  gateway.md  getting-started.md  github-action.md  index.md  integrations.md  launch-pack.md  methodology.md  migration.md  plugins.md  policies.md  policy-and-ci.md  python-api.md  social-copy.md  sqlite-history.md  summarization.md  telemetry.md  token-estimation.md  workspace.md
examples/: README.md  contextbudget.toml  gateway_agent.py  policy.toml  redcon.toml
landing/: index.html
redcon/: __init__.py  __main__.py  cli.py  config.py  engine.py  entitlements.py  io_utils.py  page_rank.py  repo_map.py  structural_search.py
redcon-benchmarks/: README.md  run_large_benchmark.py
redcon-cloud/: .env.example  Dockerfile  LICENSE  docker-compose.multiregion.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt
(+687 files in other folders)
