[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextbudget"
version = "0.1.0"
description = "Deterministic context budgeting for coding-agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "ContextBudget Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
contextbudget = "contextbudget.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["contextbudget*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
