[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redcon"
version = "1.1.0"
description = "Deterministic context budgeting for coding-agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Redcon Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "fakeredis>=2.0", "redis>=5.0"]
tokenizers = ["tiktoken>=0.7"]
redis = ["redis>=5.0"]
gateway = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
mcp = ["mcp>=1.0"]

[project.scripts]
redcon = "redcon.cli:main"
redcon-gateway = "redcon.gateway.server:run_gateway"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["redcon*"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["benchmarks", "dashboard", "examples", "redcon-cloud", "redcon-benchmarks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["redcon"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
